Correção de códigos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Porra</title>
+    <title>Index</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
@@ -12,7 +12,7 @@
 
 <body>
     <h1>
-        <center>Ola Mundo!!</center>
+        <center>Olá Mundo!!</center>
     </h1>
     <p>
         <center>Meu Primeiro Projeto Visual Studio Code</center>
