Atualização de arquivos e remoção de imagens

--- a/academia-ads/index.html
+++ b/academia-ads/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Bona Gastro</title>
+	<title>Academia ADS</title>
 
 	<meta charset="utf-8">
 
@@ -22,13 +22,13 @@
 		<div class="container">
 
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle glyphicon glyphicon-menu-hamburger" data-toggle="collapse" data-target="#bona-navbar">
+				<button type="button" class="navbar-toggle glyphicon glyphicon-menu-hamburger" data-toggle="collapse" data-target="#acad-navbar">
                 </button>
 				<a class="navbar-brand" href="index.html"> 
-					<img class="navbar-brand-bona" src="img/logo@2x.png"></a>
+					<img class="navbar-brand-acad" src="img/logo@2x.png"></a>
 			</div>
 
-			<ul id="bona-navbar" class="nav navbar-nav navbar-right collapse navbar-collapse" data-toggle="collapse" data-target="#bona-navbar">
+			<ul id="acad-navbar" class="nav navbar-nav navbar-right collapse navbar-collapse" data-toggle="collapse" data-target="#acad-navbar">
 				<li class="active"><a href="index.html">Academia ADS</a></li>
 				<li><a href="planos.html">Planos</a></li>
 				<li><a href="modalidades.html">Modalidades</a></li>
@@ -47,12 +47,10 @@
 			<div class="container">
 				<div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
 					<div>
-						<h2 id="o-bona" class="text-uppercase">Conheça nossa gastrosimplicidade</h2>
-						<p>A comida da infância, a comida da fazenda, a comida que remete a coisas boas. A gastronomia é uma experiência que brinca
-							com os sentidos e que nos transporta aos mais diferentes lugares.</p>
-						<p> Foi a busca por pratos saborosos e sem exagero que levou o Bona a encontrar a astrosimplicidade - conceito criado pelos
-							sócios Kike Moraes e Raul Florenza. Como resultado desse encontro, o Bona cria pratos que exaltam a riqueza dos alimentos
-							e que relembram a gastronomia simples, porém com qualidade e técnica apurada.</p>
+						<h2 id="o-acad" class="text-uppercase">Venha nos Conhecer</h2>
+						<p>Saiba como tudo começou e por tudo que passamos até chegarmos onde estamos e oferecer o que há de melhor para você se manter em forma.</p>
+						<p>Equipamentos modernos, espaços amplos e climatizados. Diversos ambientes para cada modalidade. Tudo pensado para você.</p>
+						<p>Professores dedicados de excelente atendimento prontos para ajudar e auxiliar você em seus treinos.</p>
 					</div>
 				</div>
 			</div>
