--- a/academia-ads/planos.html
+++ b/academia-ads/planos.html
@@ -22,12 +22,12 @@
 		<div class="container">
 
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle glyphicon glyphicon-menu-hamburger" data-toggle="collapse" data-target="#bona-navbar">
+				<button type="button" class="navbar-toggle glyphicon glyphicon-menu-hamburger" data-toggle="collapse" data-target="#acad-navbar">
                 </button>
-				<a class="navbar-brand" href="index.html"> <img class="navbar-brand-bona" src="img/logo@2x.png"></a>
+				<a class="navbar-brand" href="index.html"> <img class="navbar-brand-acad" src="img/logo@2x.png"></a>
 			</div>
 
-			<ul id="bona-navbar" class="nav navbar-nav navbar-right collapse navbar-collapse" data-toggle="collapse" data-target="#bona-navbar">
+			<ul id="acad-navbar" class="nav navbar-nav navbar-right collapse navbar-collapse" data-toggle="collapse" data-target="#acad-navbar">
 				<li><a href="index.html">Academia ADS</a></li>
 				<li class="active"><a href="planos.html">Planos</a></li>
 				<li><a href="modalidades.html">Modalidades</a></li>
@@ -41,7 +41,7 @@
 	<!-- Corpo da página -->
 	<div class="container">
 
-		<!-- #o-bona -->
+		<!-- #o-Academia -->
 		<div class="row">
 			<div class="container text-center text-uppercase">
 				<h2>Planos</h2>
@@ -51,7 +51,7 @@
 
 		<div class="row">
 			<div class="col-sm-4 text-center">
-				<img src="img/cardapio/01.jpg" class="bona-prato-imagem">
+				<img src="img/academia/gluteo-23.jpg" class="acad-prato-imagem">
 				<h3 class="text-uppercase">Básico</h3>
 				<ul class="list-unstyled">
 					<li>Musculação || Quartas, Quintas e Sextas: 6h30 às 23h</li>
@@ -61,7 +61,7 @@
 			</div>
 
 			<div class="col-sm-4 text-center">
-				<img src="img/cardapio/02.jpg" class="bona-prato-imagem">
+				<img src="img/academia/gluteo-6.jpg" class="acad-prato-imagem">
 				<h3 class="text-uppercase">STUDIO PILATES ELIITE</h3>
 				<ul class="list-unstyled">
 					<li>Quartas, Quintas e Sextas: 19h30 às 23h</li>
@@ -70,9 +70,9 @@
 			</div>
 
 			<div class="col-sm-4 text-center">
-				<img src="img/cardapio/01.jpg" class="bona-prato-imagem">
+				<img src="img/academia/local-10.jpg" class="acad-prato-imagem">
 				<h3 class="text-uppercase">Musculação</h3>
-				<p>Todos os meses uma programação que inclui o melhor da música instrumental da cidade. Confira em nosso link.</p>
+				<p>Na Academia ADS você encontra equipamentos de excelente qualidade e ergonomia com o apoio de instrutores altamente treinados.</p>
 			</div>
 		</div>
 
