--- a/academia-ads/recupera-senha.html
+++ b/academia-ads/recupera-senha.html
@@ -21,12 +21,12 @@
 		<div class="container">
 
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle glyphicon glyphicon-menu-hamburger" data-toggle="collapse" data-target="#bona-navbar">
+				<button type="button" class="navbar-toggle glyphicon glyphicon-menu-hamburger" data-toggle="collapse" data-target="#acad-navbar">
                 </button>
-				<a class="navbar-brand" href="index.html"> <img class="navbar-brand-bona" src="img/logo@2x.png"></a>
+				<a class="navbar-brand" href="index.html"> <img class="navbar-brand-acad" src="img/logo@2x.png"></a>
 			</div>
 
-			<ul id="bona-navbar" class="nav navbar-nav navbar-right collapse navbar-collapse" data-toggle="collapse" data-target="#bona-navbar">
+			<ul id="acad-navbar" class="nav navbar-nav navbar-right collapse navbar-collapse" data-toggle="collapse" data-target="#acad-navbar">
 				<li><a href="index.html">Academia ADS</a></li>
 				<li><a href="planos.html">Planos</a></li>
 				<li><a href="modalidades.html">Modalidades</a></li>
