--- a/academia-ads/contatos.html
+++ b/academia-ads/contatos.html
@@ -22,12 +22,12 @@
 		<div class="container">
 
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle glyphicon glyphicon-menu-hamburger" data-toggle="collapse" data-target="#bona-navbar">
+				<button type="button" class="navbar-toggle glyphicon glyphicon-menu-hamburger" data-toggle="collapse" data-target="#acad-navbar">
                 </button>
-				<a class="navbar-brand" href="index.html"> <img class="navbar-brand-bona" src="img/logo@2x.png"></a>
+				<a class="navbar-brand" href="index.html"> <img class="navbar-brand-acad" src="img/logo@2x.png"></a>
 			</div>
 
-			<ul id="bona-navbar" class="nav navbar-nav navbar-right collapse navbar-collapse" data-toggle="collapse" data-target="#bona-navbar">
+			<ul id="acad-navbar" class="nav navbar-nav navbar-right collapse navbar-collapse" data-toggle="collapse" data-target="#acad-navbar">
 				<li><a href="index.html">Academia ADS</a></li>
 				<li><a href="planos.html">Planos</a></li>
 				<li><a href="modalidades.html">Modalidades</a></li>
@@ -46,17 +46,11 @@
 			<div class="container">
 				<div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
 					<div>
-						<h2 id="o-bona" class="text-uppercase">Kike Moraes</h2>
-						<p>Restaurateur à frente do Bona, Kike Moraes possui vocação para negócios na área gastronômica. Filho de Carlos Moraes,
-							um dos sócios do badalado restaurante Spot, trabalhava na área de consultoria quando sua irmã, a chef Marina Moraes,
-							inaugurou o Gardênia, em Pinheiros. Formado em economia, Kike naturalmente passou a cuidar das finanças do restaurante
-							da irmã, estendendo seu trabalho à segunda unidade aberta: o Gardênia Alphaville.
+						<h2 id="o-bona" class="text-uppercase">CONTATO</h2>
+						<p>*****
 						</p>
 						<p>
-							Hoje, acumulando mais de nove anos de experiência na área, o restaurateur está à frente também do Bona, restaurante batizado
-							com o apelido de seu pai. Além de empresário, Kike também é surfista e músico, e no Bona consegue aliar seus interesses
-							por gastronomia a esta outra última paixão: uma vez por mês leva bandas de jazz e folk, incluindo sua própria, para
-							ambientar o salão do restaurante..</p>
+							******</p>
 					</div>
 				</div>
 			</div>
